Geração de PDF para emitir relatório
Correções de erros no logout, ordenação de especialidades e adicionado informações na tela de login.

--- a/Views/pages/inicio.ejs
+++ b/Views/pages/inicio.ejs
@@ -82,28 +82,39 @@
 					<option>Cirurgia Geral</option>
 					<option>Cirurgia Ginecológica</option>
 					<option>Cirurgia Pediátrica</option>
-					<option>Cirurgia Plástica
+					<option>Cirurgia Plástica</option>
 					<option>Cirurgia Torácica</option>
 					<option>Cirurgia Vascular</option>
 					<option>Clínica Médica</option>
+					<option>Densitometria Óssea</option>
 					<option>Dermatologia</option>
+					<option>Ecocardiografia</option>
 					<option>Endocrinologia e Metabologia</option>
+					<option>Endocrinologia Pediátrica</option>
 					<option>Endoscopia</option>
 					<option>Entrevista para Colonoscopia</option>
+					<option>Fonoaudiólogo</option>
 					<option>Gastroenterologia</option>
+					<option>Gastroenterologia Pediátrica</option>
 					<option>Geriatria</option>
 					<option>Ginecologia</option>
 					<option>Ginecologia Obstetrícia</option>
-					<option>Fonoaudiólogo</option>
 					<option>Hematologia e Hemoterapia</option>
+					<option>Hepatologia</option>
 					<option>Holter</option>
 					<option>Homeopatia</option>
 					<option>Infectologia</option>
-					<option>Mastologia</option>
+					<option>Infectologia Pediátrica</option>
+					<option>Mamografia</option>
 					<option>Mapa</option>
+					<option>Mastologia</option>
 					<option>Nefrologia</option>
+					<option>Nefrologia Pediátrica</option>
+					<option>Neurocirurgião</option>
 					<option>Neurologia</option>
+					<option>Neurologia Pediátrica</option>
 					<option>Nutrologia</option>
+					<option>Nutrologia Pediátrica</option>
 					<option>Oftalmologia - Consulta</option>
 					<option>Oftalmologia - Exame</option>
 					<option>Ortopedia e Traumatologia</option>
@@ -113,28 +124,16 @@
 					<option>Pequena Cirurgia - Consulta</option>
 					<option>Pequena Cirurgia - Procedimento</option>
 					<option>Pneumologia</option>
-					<option>Psiquiatria</option>
-					<option>Proctologia</option>
-					<option>Radiologia e Diagnóstico por Imagem
-					<option>Reumatologia</option>
-					<option>Urologia</option>
-					<option>Densitometria Óssea</option>
-					<option>Ecocardiografia</option>
-					<option>Ecografia Vascular com Doppler</option>
-					<option>Endocrinologia Pediátrica</option>
-					<option>Endoscopia Digestiva</option>
-					<option>Gastroenterologia Pediátrica</option>
-					<option>Hepatologia</option>
-					<option>Infectologia Pediátrica</option>
-					<option>Mamografia</option>
-					<option>Nefrologia Pediátrica</option>
-					<option>Neurologia Pediátrica</option>
-					<option>Nutrologia Pediátrica</option>
 					<option>Pneumologia Pediátrica</option>
+					<option>Proctologia</option>
 					<option>Psicoterapia</option>
+					<option>Psiquiatria</option>
+					<option>Radiologia e Diagnóstico por Imagem</option>
+					<option>Reumatologia</option>
 					<option>Reumatologia Pediátrica</option>
 					<option>Tomografia</option>
 					<option>Ultrassonografia</option>
+					<option>Urologia</option>
 				</select>
 			</div>
 			<div class="campos-form campos-maiores">
