--- a/Views/pages/login.ejs
+++ b/Views/pages/login.ejs
@@ -26,7 +26,8 @@
       <label for="senha" class="sr-only">Senha</label>
       <input type="password" id="senha" name="senha" class="form-control senha" placeholder="Senha" required="">
       <button class="btn btn-lg btn-primary btn-block btn-login" type="submit">Login</button>
-      <p class="mt-5 mb-3 text-muted">© 2021</p>
+      <p class="mt-5 mb-1 text-muted">V.1.0.1</p>
+      <p class="mb-3 text-muted">© 2022</p>
     </form>
   
 
