Criação select para especialidades dinâmicas e busca por período
Criação de api para alimentar o select da página pacientes, inclusão de input para busca por período inicial e final, ajustes no Readme e remoção de comentários desnecessários.

--- a/Views/pages/pacientes.ejs
+++ b/Views/pages/pacientes.ejs
@@ -59,6 +59,7 @@
 	<script src="/js/Validation/mascara.js"></script>
 	<script src="/js/Validation/Validacao.js"></script>
 	<script src="/js/checkboxs.js"></script>
+	<script src="/js/especialidadesAPI.js"></script>
 </body>
 
 </html>
