--- a/Views/partials/head.ejs
+++ b/Views/partials/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <title>SAP</title>
+<!-- Alterar as imagens para o local que será utilizado-->
 <link rel="icon" href="/img/sap-logo.ico" type="image/x-icon" class="logo-title">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/reset.css">
