--- a/Views/pages/relatorios.ejs
+++ b/Views/pages/relatorios.ejs
@@ -33,6 +33,18 @@
                 </div>
         
             </div>
+            <div class="container text-left w-50 p-3">
+
+                <div class="row d-flex justify-content-between mb-3 shadow-sm p-2 bg-white rounded">
+                <div class="col-sm-8">
+                    <span class="align-middle">Relatório de Registros - Excel </span>
+                </div>
+                <div class="col-sm-2">
+                    <a href="/relatorios/report-registros" class="badge badge-primary w-100 p-2">Criar</a>
+                </div>
+                </div>
+        
+            </div>
         </div>
     </section>
 
